--- a/assign2/public/index.html
+++ b/assign2/public/index.html
@@ -8,12 +8,12 @@
     <script type="module" src="/lib/client/updater.js"></script>
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles2.css">
     <script type="module" src="index.js"></script>
   </head>
   <body>
     <header>
       <h1>Task Board</h1>
-
       <form id="addCard">
         <input type="text" name="title" id="cardTitle" placeholder="Title" required>
         <input type="text" name="color" id="cardColor" placeholder="Color">
